# restbed

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.GPL  LICENSE.md  Makefile.am  README.md  STANDARDS.md  appveyor.yml  astylerc  autogen.sh  changelog.txt  conanfile.py  configure.ac  copyright.txt  restbed.pc.in  vcpkg.json
example/: CMakeLists.txt
example/authentication/source/: example.cpp
example/basic_authentication/source/: example.cpp
example/bind_service_address/source/: example.cpp
example/compression/resource/: data.zlib
example/compression/source/: example.cpp  miniz.h  miniz_wrapper.h
example/custom_methods/source/: example.cpp
example/custom_status_codes/source/: example.cpp
example/digest_authentication/source/: example.cpp
example/error_handling/source/: example.cpp
example/gzip/source/: example.cpp
example/http_client/source/: example.cpp
example/http_pipelining/source/: example.cpp
example/http_service/source/: example.cpp
example/https_client/source/: client_auth.cpp  verify_none.cpp  verify_peer.cpp
example/https_service/source/: example.cpp
example/logging/source/: custom_logger.hpp  example.cpp
example/multithreaded_service/source/: example.cpp
example/pam_authentication/source/: base64.h  example.cpp  pam.h
example/path_parameters/source/: example.cpp
example/persistent_connection/source/: example.cpp
example/publishing_multipath_resources/source/: example.cpp
example/publishing_resources/source/: example.cpp
example/request_filtering/source/: example.cpp
example/resource_filtering/source/: example.cpp
example/rules_engine/source/: accept_rule.hpp  example.cpp  example_base_rule.hpp  host_rule.hpp
example/schedule_work_on_service_runloop/source/: example.cpp
example/server_sent_events/resource/: server_sent_events.html
example/server_sent_events/source/: example.cpp
example/service_ready_handler/source/: example.cpp
example/serving_html/resource/: index.html
example/serving_html/source/: example.cpp
example/session_data/source/: example.cpp
example/session_manager/source/: example.cpp
example/signal_handling/source/: example.cpp
example/simple_service/source/: example.cpp
example/syslog_logging/source/: example.cpp  syslog_logger.hpp
example/transfer_encoding_request/resource/: request.txt
example/transfer_encoding_request/source/: example.cpp
example/transfer_encoding_response/source/: example.cpp
example/wait_for_external_event/source/: example.cpp
example/web_socket/resource/: client.html  web_socket.html
example/web_socket/source/: example.cpp
test/: CMakeLists.txt  Makefile.am  header_set_case_insensitive_regression_suite.cpp  ipc_connection_timeout_error_handler_regression_suite.cpp  missing_regex_support_on_gcc_4.8_regression_suite.cpp  missing_regex_support_regression_suite.cpp  parse_parameter_strictness_regression_suite.cpp  request_header_dotted_name_regression_suite.cpp  request_header_trailing_whitespace_regression_suite.cpp  request_integration_suite.cpp  request_unit_suite.cpp  resource_error_handler_overflow_regression_suite.cpp  resource_integration_suite.cpp  resource_set_method_handler_replace_regression_suite.cpp  resource_unit_suite.cpp  response_header_precedence_regression_suite.cpp  response_integration_suite.cpp  response_unit_suite.cpp  service_error_handler_overflow_regression_suite.cpp  service_error_handler_reset_regression_suite.cpp  service_http_version_locale_regression_suite.cpp  service_integration_suite.cpp  service_sanitised_route_bookkeeping_regression_suite.cpp  service_unit_suite.cpp  session_integration_suite.cpp  session_keep_alive_error_handler_reset_regression_suite.cpp  session_keep_alive_stale_resource_regression_suite.cpp  session_unit_suite.cpp  settings_integration_suite.cpp  settings_unit_suite.cpp  ssl_settings_integration_suite.cpp  ssl_settings_to_handle_windows_paths_regression_suite.cpp  ssl_settings_unit_suite.cpp  string_integration_suite.cpp  string_join_trailing_delimiter_regression_suite.cpp  string_replace_dollar_substitute_regression_suite.cpp  string_replace_infinite_loop_regression_suite.cpp  string_unit_suite.cpp  uncaught_exception_when_peer_closes_connection_regression_suite.cpp  uri_assignment_relative_flag_regression_suite.cpp  (+26 more)
test/acceptance/: CMakeLists.txt
test/acceptance/cmake/: build_manifest.cmake
test/acceptance/features/: authentication.feature  default_headers.feature  default_method_handlers.feature  http_headers.feature  http_method_handlers.feature  logging.feature  method_matching.feature  mutliple_resources_on_a_single_path.feature  publish_resource.feature  request_filteration.feature  resource_filteration.feature  resource_handlers.feature  resource_headers.feature  routing.feature  service_authentication.feature  steps.py  suppress_resource.feature  terrain.py
test/acceptance/source/: basic_auth_service.cpp  basic_auth_service.h  callbacks.h  resource_helper.cpp  service_helper.cpp  test_logger.cpp  test_logger.h  test_service.cpp  test_service.h
test/feature/: CMakeLists.txt
test/helpers/source/: http.hpp
test/integration/: CMakeLists.txt
test/integration/source/: http_suite.cpp  method_suite.cpp  request_fixture.h  request_suite.cpp  resource_suite.cpp  response_suite.cpp  service_suite.cpp  session_suite.cpp  settings_suite.cpp  ssl_settings_suite.cpp  string_suite.cpp  web_socket_message_suite.cpp
test/regression/: CMakeLists.txt
test/regression/source/: allow_hyphen_in_path_parameter_name.cpp  allow_underscore_in_path_parameter_name.cpp  client_fails_to_calculate_body_length.cpp  client_fails_to_calculate_correct_response_body_length.cpp  content_length_present_on_empty_response_body.cpp  content_type_present_on_empty_response_body.cpp  error_handler_not_overwritten.cpp  exception_thrown_with_space_in_resource_path.cpp  fails_to_parse_header_values_containing_colons.cpp  fails_to_parse_identical_query_parameters.cpp  fails_to_trim_whitespace_only_strings.cpp  multiple_log_entries.cpp  (+26 more)
test/unit/: CMakeLists.txt
(+583 files in other folders)
